--- a/variables.scss
+++ b/variables.scss
@@ -1,4 +1,8 @@
 $background-color: rgb(86, 49, 22);
+$projects-background-color: rgb(52, 31, 16);
+
+
+
 $title-color: rgb(255, 255, 255);
 $text-color: whitesmoke;
 $hover-color: rgb(189, 181, 138);
