--- a/variables.scss
+++ b/variables.scss
@@ -1,9 +1,13 @@
 $background-color: rgb(86, 49, 22);
 $projects-background-color: rgb(52, 31, 16);
+$about-btn-color: rgb(101, 62, 35);
+$about-drop-color: rgb(141, 82, 40);
+$navbar-color: rgb(139, 89, 54);
 
 
-
+$about-drophover-color: rgb(179, 155, 138);
 $title-color: rgb(255, 255, 255);
 $text-color: whitesmoke;
 $hover-color: rgb(189, 181, 138);
-$font: 'Roboto', sans-serif;
+$font-roboto: 'Roboto', sans-serif;
+$font-robotoC: 'Roboto Condensed', sans-serif;
