--- a/variables.scss
+++ b/variables.scss
@@ -5,7 +5,7 @@ $about-drop-color: rgb(141, 82, 40);
 $navbar-color: rgb(139, 89, 54);
 $contact-btn-color: rgba(0,0,0, 0);
 $contact-btn-border: rgb(255, 209, 176);
-
+$footer-background-color: rgb(98, 75, 49);
 
 $about-drophover-color: rgb(179, 155, 138);
 $title-color: rgb(255, 255, 255);
@@ -13,5 +13,5 @@ $text-color: whitesmoke;
 $hover-color: rgb(189, 181, 138);
 
 
-$font-roboto: 'Roboto', sans-serif;
-$font-robotoC: 'Roboto Condensed', sans-serif;
+$font-cormorant: 'Cormorant', serif;
+$font-inter: 'Inter', sans-serif;
