--- a/style.scss
+++ b/style.scss
@@ -25,13 +25,12 @@ html{
 
     .nav__nav-bar{
         padding: 0.5rem;
-        background-color: $navbar-color;
-    
+        background-color: $navbar-color;    
 
         .nav__nav-link{
             color: $text-color;
-            padding: 0.25rem;
-            font-size: 0.75rem;
+            padding: 4.25rem;
+            font-size: 4rem;
         }
 
         a:link{
@@ -82,6 +81,39 @@ html{
                 background-color: $projects-background-color;
                 margin-bottom: 2rem;
                 padding: 3rem 7rem;
+
+                .projects__grid-item-image{
+                    width: 2px;
+                }
+
+                .projects__grid-item-title{
+                    font-size: 3rem;
+                    padding-top: 1rem;
+                }
+
+                .projects__grid-item-icons{
+                    float: right;
+                    .projects__grid-item-icon{
+                        background-color: $icon-tag-background;
+                    }
+                }
+
+                .projects__grid-item-skillTags{
+                    align-items: center;
+                    margin-top: 1.5rem;
+
+                    .projects__grid-item-skill{
+                        background-color: $skill-tag-background;
+                        padding: 1rem;
+                        display: inline;
+                        margin-right: 0.5rem;
+                        border-radius: 10%;
+                    }
+
+                    .projects__grid-item-icon{
+                        display: inline;
+                    }
+                }
                 
             }
             
@@ -198,13 +230,13 @@ html{
 
 @media screen and (min-width: 360px){
     page{
-        max-width: 10%;
+        max-width: 50%;
     }
 }
 
 
 @media screen and (min-width: 768px){
     page{
-        width: 50%;
+        width: 75%;
     }
 }
