--- a/variables.scss
+++ b/variables.scss
@@ -15,3 +15,7 @@ $hover-color: rgb(189, 181, 138);
 
 $font-cormorant: 'Cormorant', serif;
 $font-inter: 'Inter', sans-serif;
+
+
+$skill-tag-background: rgb(129, 78, 41);
+$icon-tag-background: rgb(105, 77, 57);
