--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,12 @@
-@use "./variables" as *;
+@use "./variables.scss" as *;
+
+@use "./layout/navigation";
+@use "./layout/home";
+@use "./layout/projects";
+@use "./layout/about";
+@use "./layout/contact";
+@use "./layout/footer";
+
 
 
 *{
@@ -12,220 +20,16 @@ html{
 .page{
     color: $text-color;
     font-family: $font-cormorant;
+    
     .container{
         display: flex;
         flex-direction: column;
-        background-color: $background-color
+        background-color: $background-color;
+
         
     }
 }
 
-.nav{
-    text-align: center;
-
-    .nav__nav-bar{
-        padding: 0.5rem;
-        background-color: $navbar-color;    
-
-        .nav__nav-link{
-            color: $text-color;
-            padding: 4.25rem;
-            font-size: 4rem;
-        }
-
-        a:link{
-            text-decoration: none;
-        }
-    }
-}
-
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .home{
-
-        .home__details{
-            padding: 1rem 1.5rem;
-
-            .home__name{
-                font-size: 1rem;
-                font-style: italic;
-            }
-
-            .home__title{
-                margin-top: 1rem;
-            }
-            
-            .home__description{
-                padding: 1.5rem 0rem;
-                font-family: $font-inter;
-            }
-        }
-    }
-
-    .projects{
-
-        .projects__grid{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            
-            .projects__title{
-                margin-bottom: 1rem;
-
-            }
-
-            .projects__grid-item{
-                background-color: $projects-background-color;
-                margin-bottom: 2rem;
-                padding: 3rem 7rem;
-
-                .projects__grid-item-image{
-                    width: 2px;
-                }
-
-                .projects__grid-item-title{
-                    font-size: 3rem;
-                    padding-top: 1rem;
-                }
-
-                .projects__grid-item-icons{
-                    float: right;
-                    .projects__grid-item-icon{
-                        background-color: $icon-tag-background;
-                    }
-                }
-
-                .projects__grid-item-skillTags{
-                    align-items: center;
-                    margin-top: 1.5rem;
-
-                    .projects__grid-item-skill{
-                        background-color: $skill-tag-background;
-                        padding: 1rem;
-                        display: inline;
-                        margin-right: 0.5rem;
-                        border-radius: 10%;
-                    }
-
-                    .projects__grid-item-icon{
-                        display: inline;
-                    }
-                }
-                
-            }
-            
-        }
-    }
-
-    .about{
-
-        .about__details{
-            padding: 1rem 1.5rem;
-            
-            .about__title{
-                margin-bottom: 1rem;
-
-            }
-
-            .about__description{
-                font-size: 0.8rem;
-                font-family: $font-inter;
-            }
-
-        }
-            
-        .about__grid{
-            margin: 1rem 0rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            
-
-            .about__dropsection{
-                padding: 0rem 1rem;
-                margin-bottom: 2rem;
-
-                .about__drop-title{
-                    margin-bottom: 1rem;
-                }
-                
-                .about__dropbtn{
-                    background-color: $about-btn-color;
-                    color: $text-color;
-                    text-align: center;
-                    border : 0.5rem;
-                    border: white;
-                    margin-bottom: 0.5rem;
-                    padding: 0.5rem 0.5rem;
-                    width: 15rem;
-                
-                }
-
-                .about__dropbtn:hover .about__dropbtn{
-                        background-color: $about-drophover-color;
-                }
-
-                .about__dropbtn-content{
-                    display: none;
-                    position: inherit;
-                    background-color: $about-drop-color;
-                    margin-top: 1rem;
-                    padding: 2rem 1rem;
-                    border: none;
-                    z-index: 1;
-                }
-
-                .about__dropbtn:hover .about__dropbtn-content{
-                    display: block;
-                }
-
-            }
-        }
-    }
-
-
-    .contact{        
-
-       
-
-        .contact__title{
-            font-size: 4rem;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-            text-align: center;
-        
-
-        .contact__btn{
-            background-color: $contact-btn-color;
-            color: $text-color;
-            border-color: $contact-btn-border;
-            margin-bottom: 1.5rem;
-            margin-top: 2rem;
-            padding: 1rem 0.25rem;
-            width: 15rem;
-            font-family: $font-inter;
-        }
-        }
-    }
-
-    .footer__bar{
-        padding: 2rem;
-        
-        .footer__icons{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 1rem;
-            
-            a:visited{color: white;}
-        }
-
-
-    }
-}
 
 
 @media screen and (min-width: 360px){
