--- a/layout/_home.scss
+++ b/layout/_home.scss
@@ -6,12 +6,13 @@
         padding: 1rem 1.5rem;
 
         .home__name{
-            font-size: 1rem;
-            font-style: italic;
+            font-size: 1.75rem;
         }
 
         .home__title{
             margin-top: 1rem;
+            font-size: 4.5rem;
+            font-weight: 400;
         }
         
         .home__description{
