--- a/variables.scss
+++ b/variables.scss
@@ -3,7 +3,7 @@ $projects-background-color: rgb(52, 31, 16);
 $about-btn-color: rgb(101, 62, 35);
 $about-drop-color: rgb(141, 82, 40);
 $navbar-color: rgb(139, 89, 54);
-$contact-btn-color: rgba(0,0,0, 0);
+$contact-btn-color: rgb(39, 36, 31);
 $contact-btn-border: rgb(255, 209, 176);
 $footer-background-color: rgb(98, 75, 49);
 
