--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 .nav {
   text-align: center;
 }
-.nav .nav__nav-bar {
-  padding: 0.5rem;
+.nav .nav__nav-burger .nav__nav-burgerBtn {
+  margin: 1rem;
+  padding: 1rem;
   background-color: rgb(139, 89, 54);
+  float: right;
 }
-.nav .nav__nav-bar .nav__nav-link {
+.nav .nav__nav-burger .nav__nav-collapsed {
+  margin-top: 2rem;
+  display: none;
+}
+.nav .nav__nav-burger .nav__nav-collapsed .nav__nav-link {
   color: whitesmoke;
-  padding: 1.25rem;
-  font-size: 3rem;
+  padding: 1rem;
+  font-size: 1rem;
 }
-.nav .nav__nav-bar a:link {
+.nav .nav__nav-burger .nav__nav-collapsed a:link {
   text-decoration: none;
 }
 
@@ -18,39 +24,40 @@
   padding: 1rem 1.5rem;
 }
 .home .home__details .home__name {
-  font-size: 1rem;
-  font-style: italic;
+  font-size: 1.75rem;
 }
 .home .home__details .home__title {
   margin-top: 1rem;
+  font-size: 4.5rem;
+  font-weight: 400;
 }
 .home .home__details .home__description {
   padding: 1.5rem 0rem;
   font-family: "Inter", sans-serif;
 }
 
-.projects .projects__grid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-.projects .projects__grid .projects__title {
+.projects .projects__title {
   margin-bottom: 1rem;
+  padding-left: 1.5rem;
+}
+.projects .projects__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
 }
 .projects .projects__grid .projects__grid-item {
   background-color: rgb(52, 31, 16);
   margin-bottom: 2rem;
-  padding: 3rem 7rem;
+  padding: 2rem;
+  width: 100%;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-image {
   width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  padding-bottom: 1.5rem;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-title {
-  font-size: 3rem;
-  padding-top: 1rem;
+  font-size: 2.5rem;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-icons {
   float: right;
@@ -64,10 +71,11 @@
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-skillTags .projects__grid-item-skill {
   background-color: rgb(129, 78, 41);
-  padding: 1rem;
+  padding: 0.5rem;
   display: inline;
   margin-right: 0.5rem;
-  border-radius: 10%;
+  border-radius: 7%;
+  font-size: 0.9rem;
 }
 .projects .projects__grid .projects__grid-item .projects__grid-item-skillTags .projects__grid-item-icon {
   display: inline;
@@ -75,6 +83,9 @@
 @media screen and (min-width: 768px) {
   .projects .projects__grid {
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
   }
 }
 
@@ -97,7 +108,6 @@
   align-items: center;
 }
 .about .about__grid .about__dropsection {
-  padding: 0rem 1rem;
   margin-bottom: 2rem;
 }
 .about .about__grid .about__dropsection .about__drop-title {
@@ -131,25 +141,32 @@
 }
 
 .contact {
-  display: grid;
-  grid-template-columns: 1fr;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .contact .contact__title {
-  font-size: 4rem;
+  font-size: 3.85rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
+  padding-left: 0.25rem;
   text-align: center;
 }
 .contact .contact__btn {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgb(39, 36, 31);
   color: whitesmoke;
   border-color: rgb(255, 209, 176);
   margin-bottom: 1.5rem;
   margin-top: 2rem;
   padding: 1rem 0.25rem;
   font-family: "Inter", sans-serif;
+  font-size: large;
   text-align: center;
+  width: 10rem;
+}
+.contact .contact__email {
+  font-family: "Inter", sans-serif;
+  padding-top: 1rem;
 }
 
 .footer__bar {
