--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -27,6 +27,14 @@
                     text-decoration: none;
                 }
             }
+            #burger-collapsed .nav__nav-link{
+                box-sizing: border-box; display: block;
+                width: 100%; border-top: 1px solid #333;
+            }
+            #burger-collapsed:hover{
+                display: block;
+            }
+            
         
     }
 }
